[package]
name = "honeycomb"
version = "0.1.0"
edition = "2021"
authors = ["vys <hey@vyslix.dev>"]
license = "GPL-3.0"
description = "a voxel engine featuring real-time ray marching"
repository = "https://github.com/builtbyvys/honeycomb"
homepage = "https://github.com/builtbyvys/honeycomb"
bugs = "https://github.com/builtbyvys/honeycomb/issues"

[dependencies]
winit = { version = "0.30.8", features = ["serde"] }
wgpu = { version = "24.0.1", features = ["glsl"] }

glam = { version = "0.29.2", features = ["serde"] }
cgmath = { version = "0.18.0", optional = true }
bytemuck = "1.21.0"
serde = { version = "1.0.217", features = ["derive"] }

noise = "0.9.0"
fastnoise-lite = { version = "1.1.1", optional = true }

rayon = "1.10.0"
parking_lot = "0.12.3"

egui = { version = "0.30.0", optional = true }
eframe = { version = "0.30.0", optional = true }

env_logger = "0.11.6"
anyhow = "1.0.95"
thiserror = "2.0.11"
log = "0.4.25"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"
rand = "0.9.0"
image = "0.25.5"
indicatif = "0.17.11"

[features]
default = ["basic-renderer", "egui-debug"]
basic-renderer = []
ray-marcher = []
gpu-ray-marcher = ["wgpu/compute"]
egui-debug = ["dep:egui", "dep:eframe"]
alternative-math = ["dep:cgmath"]
advanced-noise = ["dep:fastnoise-lite"]

[workspace]
members = ["examples/*"]

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
